Fix dark mode

--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -1,7 +1,11 @@
 /* Contact.css */
 
-body {
+body.bg-light {
   background-color: #f8f9fa;
+}
+
+body.bg-dark {
+  background-color: #343a40;
 }
 
 h2 {
@@ -44,4 +48,12 @@ h2 {
   /* Ensure the background of the input is dark */
   color: #fff;
   /* Ensure the text color is white */
+}
+
+.text-white {
+  color: #fff !important;
+}
+
+.text-dark {
+  color: #343a40 !important;
 }
